# unicode-normalization

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
.github/workflows/: rust.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: streaming.rs  unicode-normalization.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/iterator/: trait.Iterator.js
scripts/: unicode.py
src/: __test_api.rs  buffer.rs  correct_ccs.rs  decompose.rs  ks_x_1026_1.rs  lib.rs  lookups.rs  normalize.rs  perfect_hash.rs  quick_check.rs  recompose.rs  replace.rs  standardize_korean_syllables.rs  str.rs  stream_safe.rs  tables.rs  test.rs  testdata.rs
src/unicode_normalization/: decompose.rs.html  lib.rs.html  normalize.rs.html  quick_check.rs.html  recompose.rs.html  stream_safe.rs.html  tables.rs.html
tests/: cjk_compat_variants.rs  core.rs  correct_defective_ccs.rs  ext.rs  ks_x_1026_1.rs  normalization.rs  public_assigned.rs  standard_korean_syllables.rs  stream_safe_normalization.rs  svar.rs  test_nfc_nobuffer_newline_or_cgj.rs  test_normalization.rs  test_streamsafe_regression.rs  tests.rs
tests/data/: normalization_tests.rs
unicode_normalization/: enum.IsNormalized.html  fn.is_nfc.html  fn.is_nfc_quick.html  fn.is_nfc_stream_safe.html  fn.is_nfc_stream_safe_quick.html  fn.is_nfd.html  fn.is_nfd_quick.html  fn.is_nfd_stream_safe.html  fn.is_nfd_stream_safe_quick.html  index.html  trait.UnicodeNormalization.html
unicode_normalization/char/: index.html
